--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "library-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "worker": "node app.js"
+    "dev": "nodemon app.js"
   },
   "author": "Niji Jose",
   "license": "ISC",
